Disable zero copy DXGI video on AMD.

Using zero copy DXGI video seems to cause some hangs inside the AMD
driver. Plumb GpuDriverBugWorkarounds into the
DXVAVideoDecodeAccelerator, so the feature can be disabled on those
devices.

BUG=623209
CQ_INCLUDE_TRYBOTS=tryserver.chromium.linux:linux_optional_gpu_tests_rel;tryserver.chromium.mac:mac_optional_gpu_tests_rel;tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2094063002
Cr-Commit-Position: refs/heads/master@{#402725}

Former-commit-id: b10c5dd4f35e7a8bcda5e1b291653e6318add253