gpu/config/gpu_driver_bug_workaround_type.h
@@ -41,6 +41,8 @@
          disable_direct_composition)                         \
   GPU_OP(DISABLE_DISCARD_FRAMEBUFFER,                        \
          disable_discard_framebuffer)                        \
+  GPU_OP(DISABLE_DXGI_ZERO_COPY_VIDEO,                       \
+         disable_dxgi_zero_copy_video)                       \
   GPU_OP(DISABLE_EXT_DRAW_BUFFERS,                           \
          disable_ext_draw_buffers)                           \
   GPU_OP(DISABLE_GL_RGB_FORMAT,                              \
